RESOLVED FIXED273747
[WPE] Theme color changes aren't propagated to API consumer
https://bugs.webkit.org/show_bug.cgi?id=273747
Summary [WPE] Theme color changes aren't propagated to API consumer
Alfred E. Neumayer
Reported 2024-05-05 12:49:26 PDT
Created attachment 471287 [details] Theme Color Changed GLib signal and WPE API WIP patch attached. General ideas or input for improvements before proposing a PR?
Attachments
Theme Color Changed GLib signal and WPE API (8.49 KB, patch)
2024-05-05 12:49 PDT, Alfred E. Neumayer
no flags
Alfred E. Neumayer
Comment 1 2024-11-01 10:51:48 PDT
EWS
Comment 2 2025-06-10 05:29:00 PDT
Committed 296035@main (2246a2aa28d5): <https://commits.webkit.org/296035@main> Reviewed commits have been landed. Closing PR #36049 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.