Source/WebKit/UIProcess/API/wpe/WPEWebView.h
@@ -74,6 +74,8 @@ public:
     WebKitInputMethodContext* inputMethodContext() const;
     void setInputMethodState(std::optional<WebKit::InputMethodState>&&);
 
+    void themeColorDidChange();
+
 #if ENABLE(FULLSCREEN_API)
     bool isFullScreen() const;
     void willEnterFullScreen();
