Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp
@@ -711,6 +711,9 @@ void DrawingAreaCoordinatedGraphics::display(UpdateInfo& updateInfo)
     webPage->updateRendering();
     webPage->finalizeRenderingUpdate({ });
     webPage->flushPendingEditorStateUpdate();
+#if PLATFORM(WPE)
+    webPage->flushPendingThemeColorChange();
+#endif
 
     // The layout may have put the page into accelerated compositing mode. If the LayerTreeHost is
     // in charge of displaying, we have nothing more to do.
